# video_service

./: .gitignore
auth_service/: .env.example  Cargo.toml
auth_service/migrations/: 20250212183343_users.sql  20250214173515_video.sql
auth_service/src/: main.rs
auth_service/src/datatypes/: mod.rs  req_input.rs  video_metadata.rs
auth_service/src/dbcalls/: check_user_exists.rs  mod.rs
auth_service/src/helpers/: check_resource_exists.rs  generate_presigned_url.rs  generate_token.rs  mod.rs  validate_token.rs
auth_service/src/middlewares/: auth_middleware.rs
auth_service/src/model/: mod.rs  users.rs  videos.rs
auth_service/src/responses/: general_errors.rs  mod.rs  validation_errors.rs
auth_service/src/routes/: mod.rs
auth_service/src/routes/elasticsearch_controllers/: mod.rs  search_bar_controller.rs  search_list.rs
auth_service/src/routes/user_controllers/: create_user.rs  current_user.rs  login_user.rs  mod.rs
auth_service/src/routes/video_controllers/: get_upload_url.rs  get_video.rs  mod.rs  start_transcode.rs  thumbnail_upload.rs  upload_video.rs
deleteFromCloudinary/: package.json  pnpm-lock.yaml
deleteFromCloudinary/src/: index.ts
elastic_search/: .env.example  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
elastic_search/prisma/: schema.prisma
front_end/: package.json  pnpm-lock.yaml  tsconfig.app.json
test/: package.json  pnpm-lock.yaml
transcode_480/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
transoder/: all_normal.txt  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
(+191 files in other folders)
