[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.17.0"
cloudinary = "0.8.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
serde = {version = "1.0.217", features = ["derive"]}
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std-native-tls"] }
validator = { version = "0.20.0", features = ["derive"] }
