[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
bcrypt = "0.17.0"
cloudinary = "0.8.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rdkafka = "0.37.0"
reqwest = "0.12.12"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.139"
sha1 = "0.10.6"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std-native-tls"] }
tokio = "1.43.0"
validator = { version = "0.20.0", features = ["derive"] }
